# Syncogram

./: .gitignore  README.md  TODO.md  cmds.txt  config.ini  config.json  pyproject.toml  release.py  requirements.txt  test.db  test.db-journal  test.session
.github/workflows/: linux.yml  release.yml
Syncogram/: application.py  config.json  test.py
Syncogram/assets/: ads.json
Syncogram/sourcefiles/: __init__.py  config.py  controller.py  utils.py
Syncogram/sourcefiles/algorithms/: __init__.py  decorators.py  sync_account_avatars.py  sync_account_blacklist.py  sync_account_bots.py  sync_account_contacts.py  sync_account_favorites.py  sync_account_initials.py  sync_account_privacy.py  sync_account_private_channels_groups.py  sync_account_public_channels_groups.py  sync_account_secure.py  sync_account_stickers.py  sync_fav_messages.py
Syncogram/sourcefiles/components/: __init__.py  about.py  buttons.py  errors.py  greetings.py  logout.py  settings.py  task.py  timeleft.py  update.py  warnings.py
Syncogram/sourcefiles/database/: constants.py  consts.py  sqlite.py
Syncogram/sourcefiles/leftside/: __init__.py  accounts.py  main.py
Syncogram/sourcefiles/rightside/: __init__.py  main.py  manager.py
Syncogram/sourcefiles/telegram/: __init__.py  client.py  manager.py  task.py
application/: application copy.py  application.py  application_copy.py  main.py  requirements.txt  test.py
application/assets/: manifest.json
application/sourcefiles/: __init__.py  navbar.py  navold.py  utils.py
async/: client.py  main.py  sql.py  utils.py
migrator/: main.py  requirements.txt
scripts/: build.bat  build.sh  locales.py
tests/: app.py  client.py  forwards.py  main.py  manager.py  sql.py  test.py  utils.py
(+41 files in other folders)
