[tool.poetry]
name = "syncogram"
version = "0.0.1"
description = ""
authors = ["Sergey Degtyar <sergeydegtyar@internet.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = "0.20.0"
screeninfo = "^0.8.1"
pyinstaller = "^6.5.0"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
